# algo-engineering-cpp

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  pull-request.yml
Adobe/: README.md
Amazon/: all_Amazon_Questions.md
Atlassian/: README_Professional_Tracker_With_Links.md
CONTRIBUTING.md/: README.md
data/: 1779361108961_Amazon_Questions.csv  1779361108963_ByteDance_Questions.csv  1779361108965_DEShaw_Questions.csv  1779361108965_Goldman_Sachs_Questions.csv  1779361108966_Google_Questions.csv  1779361108966_IBM_Questions.csv  1779361108966_Intel_Questions.csv  1779361108967_Intuit_Questions.csv  1779361213303_Meta_Questions.csv  1779361213305_NVIDIA_Questions.csv  1779361213305_Ola_Questions.csv  1779361213306_Salesforce_Questions.csv  1779361213306_ServiceNow_Questions.csv  1779361213307_Snap_Questions.csv  1779361213307_Snowflake_Questions.csv  1779361213308_Spotify_Questions.csv  1779361213308_Stripe_Questions.csv  1779361238760_Twitter_Questions.csv
hubs/: README.md
hubs/companies/: 1779361108961_Adobe_Questions.csv  1779361108961_Apple_Questions.csv  1779361108962_Atlassian_Questions.csv  1779361108962_BlackRock_Questions.csv  1779361108962_Bloomberg_Questions.csv  1779361108963_Cisco_Questions.csv  1779361108963_Citadel_Questions.csv  1779361108964_Databricks_Questions.csv  1779361108964_Dell_Questions.csv  1779361108964_Deolite_Questions.csv  1779361108965_Flipkart_Questions.csv  1779361213303_JP_Morgan_Questions.csv  1779361213303_Linkedln_Questions.csv  1779361213304_Microsoft_Questions.csv  1779361213304_Morgan_Stanley_Questions.csv  1779361213304_Netflix_Questions.csv  1779361213305_Oracle_Questions.csv  (+10 more)
metadata/: database.json
scripts/: auto_discover.py  generate_docs.py  start.py
src/: README.md
(+110 files in other folders)
